# file_uploader

./: .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  example.env
app/: Dockerfile  pyproject.toml
app/app/: settings.py  urls.py
app/files/: handlers.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
certbot/: certify-init.sh
nginx/: Dockerfile  run.sh
nginx/configs/: default-dev.conf.template  default-ssl.conf.template  default.conf.template
